# rustymirror

./: .claudeignore  .gitattributes  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: sync-version.js
src/: App.vue  constants.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  exiftool.rs  hasher.rs  heic.rs  lib.rs  main.rs  metadata.rs  organizer.rs  scanner.rs  types.rs
src-tauri/src/commands/: cache.rs  file.rs  media.rs  metadata.rs  mod.rs  organizer.rs  scan.rs  thumbnail.rs  util.rs
src-tauri/src/scanner/: bktree.rs  grouping.rs  mod.rs  record.rs  walk.rs
src/components/: BatchEditPanel.vue  ChevronIcon.vue  ClearIcon.vue  CollapsibleSection.vue  DuplicateGroup.vue  DuplicatesView.vue  FailedFilesWarning.vue  FolderSection.vue  IconClose.vue  IconWarning.vue  ImageDetailPanel.vue  ImageGroup.vue  Lightbox.vue  MapPreview.vue  MetadataBottomPanel.vue  MetadataManager.vue  MetadataPanel.vue  MetadataView.vue  ModeRail.vue  OrganizerView.vue  PanelSectionDate.vue  PanelSectionDetails.vue  PanelSectionExposure.vue  PanelSectionFileCamera.vue  RefreshIcon.vue  ResultsArea.vue  ScanProgress.vue  SearchInput.vue  SelectChevron.vue  SettingsModal.vue  Sidebar.vue  SidebarDivider.vue  SidebarDuplicates.vue  SidebarHistory.vue  SidebarMeta.vue  SidebarOrganizer.vue  SidebarScanButton.vue  UpdateToast.vue
src/composables/: useCacheSize.js  useFolderPicker.js  useMode.js  (+3 more)
(+19 files in other folders)
