[package]
name = "rustymirror"
version = "1.3.5"
edition = "2021"

[lib]
name = "rustymirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
log = { version = "0.4", features = ["release_max_level_warn"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
# image-hasher is the maintained fork of img_hash — uses image 0.24+
image = { version = "0.24", features = ["jpeg", "png", "webp", "bmp", "gif", "tiff"] }
image_hasher = "1.2"
blake3 = "1.5"
rayon = "1.10"
trash = "3.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
unicode-normalization = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
kamadak-exif = "0.5"
little_exif = "0.5"
open = "5"

[profile.dev]
incremental = false
debug = 1

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
